Added grid system

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-light">
+      <nav class="navbar sticky-top navbar-expand-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">VIENNA</a>
           <button
@@ -81,15 +81,52 @@
           </div>
         </div>
       </nav>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
       <img
-        src="/images/vienna-skyline.jpg"
+        src="https://iili.io/pqVbbn.jpg"
         alt="Skyline of Vienna"
         class="skyline"
       />
-
+      <div>
+        <div class="col-md-12 text-center">
       <h1>VIENNA</h1>
+      <div>
+        <div class="col-md-12 text-center">
       <h2>AUSTRIA</h2>
+      <div>
+        </div>
+        </div>
+
       <hr />
     </header>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+
+      <h4>
+        “Dream on, but don’t imagine they’ll all come true. When will you realize… Vienna waits for you.” 
+        <br> – Billy Joel
+      </h4>
+      </div>
+
+     <div class="col-md-12 text-center">
+      <p class="introduction">
+        Vienna (German: Wien) is the capital of the Republic of Austria and by far its most populous city, with an urban population of 1.9 million and a metropolitan population of 2.4 million. It is the country's artistic, cultural, economic and political centre. It is known for its high living standards, relaxed yet elegant lifestyle and rich musical life.
+        <br/>
+        <br/>
+
+The thing about Vienna is that it not only is a large city, but that it has always been – as the former home of the Habsburg court and its various empires, it has always housed a large population and enjoyed a privileged position, being home to many artists, especially composers including Beethoven, Haydn, Liszt, Mozart, Schubert and Johann Strauss II. It was long the largest German-speaking city in the world before being surpassed by Berlin. The large historic city centre of Vienna filled with monuments to its imperial past is inscribed on the UNESCO World Heritage List.
+      </p>
+      </div>
+</div>
+
+      <hr />
+      </div>
+
+    </section>
   </body>
 </html>
