Styled doodle-section

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#">Contact</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -67,13 +67,20 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Dropdown link
+                  Weekend trip
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Culture</a></li>
+                  <li><a class="dropdown-item" href="#">Cuisine</a></li>
                   <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">
+                      Nightlife
+                    </a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">
+                      Outdoor
+                    </a>
                   </li>
                 </ul>
               </li>
@@ -115,7 +122,7 @@
 
      <div class="col-md-12 text-center">
       <p class="introduction">
-        Vienna (German: Wien) is the capital of the Republic of Austria and by far its most populous city, with an urban population of 1.9 million and a metropolitan population of 2.4 million. It is the country's artistic, cultural, economic and political centre. It is known for its high living standards, relaxed yet elegant lifestyle and rich musical life.
+        Vienna is the capital of the Republic of Austria and by far its most populous city, with an urban population of 1.9 million and a metropolitan population of 2.4 million. It is the country's artistic, cultural, economic and political centre. It is known for its high living standards, relaxed yet elegant lifestyle and rich musical life.
         <br/>
         <br/>
 
@@ -126,7 +133,50 @@ The thing about Vienna is that it not only is a large city, but that it has alwa
 
       <hr />
       </div>
+      <div class="container">
+        <div class="row gap">
+          <div class="col-md-12 text-center">
+        
+      <h4>
+        Your weekend trip to Vienna
+      </h4>
+      <p class="we-introduction">
+        You are in Vienna for a weekend and don't know what to do? Follow my suggestions!
+      </p>
+      </div>
+   
+      <div class="col-md-3">
+        <div class="culture-wrapper py-4 px-0 mb-4">
+      <p class="text-center"> CULTURE</p>
+        <img src="https://1000things.b-cdn.net/app/uploads/2021/05/illustration-kunstkultur-sandraspiegl-640x640.png" alt="Doodle of The kiss" class="img-fluid ">
+        </div>
 
+
+      </div>
+       <div class="col-md-3">
+        <div class="cuisine-wrapper py-4 px-0 mb-4">
+        <p class="text-center"> CUISINE</p>
+        <img src="https://1000things.b-cdn.net/app/uploads/2021/05/wien-fruehstueck-liste-640x640.png" alt="Doodle of a viennese breakfast" class="img-fluid">
+</div>
+
+      </div>
+       <div class="col-md-3">
+        <div class="nightlife-wrapper py-4 px-0 mb-4">
+        <p class="text-center"> NIGHTLIFE</p>
+        <img src="https://1000things.b-cdn.net/app/uploads/2021/05/bars-in-wien-listen-header-640x640.png" alt="Doodle of a bar" class="img-fluid">
+</div>
+
+      </div>
+       <div class="col-md-3">
+        <div class="outdoor-wrapper py-4 px-0 mb-4">
+        <p class="text-center">OUTDOOR</p>
+        <img src="https://1000things.b-cdn.net/app/uploads/2021/05/wandern-in-oesterreich-listen-header-640x640.png" alt="Doodle of a mountain" class="img-fluid">
+</div>
+
+      </div>
+       <hr class="underline"/>
+      </div>
+      </div>
     </section>
   </body>
 </html>
